# Smartisax

./: .gitattributes  .gitignore  AGENTS.md  NOTICE  README.md
.github/workflows/: webview-source-build.yml
apks/: README.md
apks/webview-donor-inbox/: README.md
apps/AdbRescue/: AndroidManifest.xml  apktool.yml
apps/SmartisaxControls/: AndroidManifest.xml  apktool.yml  privapp-permissions-com.smartisax.controls.xml
apps/SmartisaxShell/: AndroidManifest.xml  apktool.yml  privapp-permissions-com.smartisax.browser.xml
apps/TextBoomOnnxSmokeBench/: AndroidManifest.xml
apps/TextBoomPpOcrBench/: AndroidManifest.xml
apps/TextBoomPpOcrBench/native/src/main/cpp/: CMakeLists.txt  NativeBench.cc  det_process.cc  pipeline.cc  pipeline.h  rec_process.cc
apps/TextBoomPpOcrOfficialBench/: AndroidManifest.xml
docs/: README.md  hard-rom-ota-trust.md  project-rename-smartisax.md  rom-archive.md  v0.5-debloat-candidates.md
docs/index/: agent-memory-skill-map.md  artifact-index.md  current-route.md  current-state.md  hard-rom-log-toc.md  knowledge-base.md  legacy-systemless-index.md  next-work.md  research-index.md  workspace-layout.md
docs/research/: android_exploit_research.md  bootloader-diagnosis.md  browser-webview-modernization-audit.md  browser-webview-version-gap-audit.md  cloud-service-debloat-audit.md  darkmode-integration-map.md  darkmode-persistence-audit.md  darkmode-qs-strategy-audit.md  (+56 more)
fake-ota-server/: server.py
tests/: test_r2_ocr_ppocr_replacement_plan.py  test_r2_textboom_ocr_compare_report.py  test_r2_textboom_ppocr_benchmark.py  test_r2_textboom_ppocr_corpus_template.py  test_r2_textboom_ppocr_mapping.py  test_r2_textboom_ui_result_baseline.py
tools/: r2-agent0-offline-tests.py  r2-android-sdk-env.sh  r2-android-sdk-install.sh  r2-apk-preserve-v2-signing-block.py  r2-apk-same-size-pad.py  r2-apk-signature-boundary-check.sh  r2-apk-v2-carrier-adapt.py  r2-apktool-rebuild-smoke.sh  r2-arsc-prune-locales.py  r2-browser-webview-live-state-audit.sh  r2-browser-webview-modernization-audit.py  r2-browser-webview-version-gap-audit.py  r2-build-apk-locale-prune-binary-arsc.sh  r2-build-apk-locale-prune.sh  r2-build-feature-control-graph-corpus.py  r2-build-framework-res-locale-probe.sh  r2-build-keyguard-browser-graph-corpus.sh  r2-build-launcher-entry-hide-apks.sh  r2-build-modification-critical-graph-corpus.py  r2-build-native-darkmode-tile-apks.sh  r2-build-noop-ota.sh  r2-build-protips-locale-prune-apk.sh  r2-build-services-kg1-skip-keyguard-jar.sh  r2-build-services-pm-noop-jar.sh  r2-build-services-pm1-cache-allowlist-jar.sh  r2-build-services-portal2.3-framebuffer-grant-jar.sh  r2-build-services-portal5j-projection-permissions-jar.sh  r2-build-services-wadb2-current-wifi-jar.sh  r2-build-services-wadb2-privapp-cache-jar.sh  r2-build-settingssmartisan-darkmode-ui-apk.sh  r2-build-settingssmartisan-locale-filter-apk.sh  r2-build-sidebar-font-ocr-deleted-apk.sh  r2-build-sidebar-font-ocr-disabled-apk.sh  r2-build-sidebar-onestep-a11y-apk.sh  r2-build-sidebar-topbar-hide-apk.sh  r2-build-smartisanos-framework-res-locale-probe.sh  r2-build-smartisax-controls.sh  r2-build-smartisax-shell.sh  r2-build-systemui-certprobe-noop-apk.sh  r2-build-textboom-onnx-smoke-apk.sh  (+363 more)
(+81 files in other folders)
